--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 11/11/2021 06:00<br>
+Completed books sorted by length - 11/11/2021 08:49<br>
 -----------------------------------------------------<br>
  <br>
-410 books<br>
+411 books<br>
  <br>
 Shadow War of the Night Dragons 1 -The Dead City - Prologue - John Scalzi - 0H 21M (Completed in 2014)<br>
 Gratitude - Oliver Sacks - 0H 36M (Completed in 2020)<br>
@@ -103,6 +103,7 @@ Culture 08 - Matter - Iain M. Banks - 5H 35M (Completed in 2015)<br>
 Atomic Habits - James Clear - 5H 36M (Completed in 2021)<br>
 The Carpet People - Terry Pratchett - 5H 37M (Completed in 2017)<br>
 InterWorld 1 - InterWorld - Neil Gaiman - 5H 38M (Completed in 2013)<br>
+Raising Good Humans - Hunter Clarke-Fields - 5H 38M (Completed in 2021)<br>
 Fahrenheit 451 - Ray Bradbury - 5H 38M (Completed in 2019)<br>
 Avengers Vol. 7 The Age of Khonshu - 5H 43M (Completed in 2021)<br>
 InterWorld 2 - The Silver Dream - Neil Gaiman - 5H 46M (Completed in 2016)<br>
@@ -397,9 +398,9 @@ Stormlight Archive 4 - Rhythm of War - Brandon Sanderson - 57H 41M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 140 books - 1809H 42M / 75D 9H 42M<br>
+Queue - Current Audiobooks - 139 books - 1804H 3M / 75D 4H 3M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 77 books - 721H 22M / 30D 1H 22M<br>
+Completed in 2021 - 78 books - 727H 1M / 30D 7H 1M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -418,22 +419,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-171 queued items: 2293H 30M / 95D 13H 30M<br>
+170 queued items: 2287H 51M / 95D 7H 51M<br>
 0 reserve titles are marked as high priority<br>
-20.68% of reserve items are queued<br>
+20.58% of reserve items are queued<br>
  <br>
 All books included in this report: 1237 titles - 14610H 48M / 608D 18H 48M<br>
-Records not found in the lookup file: 0<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 410 titles - 4499H 10M / 187D 11H 10M<br>
-Total remaining in queue and reserve: 827 titles - 10111H 37M / 421D 7H 37M<br>
-Average completed per year: 46.3 titles - 507H 49M / 21D 3H 49M<br>
-Remaining years of reserve material at average yearly pace: 17.9<br>
-Remaining years of reserve material at current year pace: 9.3<br>
+Total completed since 01/01/2013: 411 titles - 4504H 49M / 187D 16H 49M<br>
+Total remaining in queue and reserve: 826 titles - 10105H 58M / 421D 1H 58M<br>
+Average completed per year: 46.4 titles - 508H 27M / 21D 4H 27M<br>
+Remaining years of reserve material at average yearly pace: 17.8<br>
+Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:01.803 (1.803 seconds)<br>
-Total time including file writes: 00:00:01.803 (1.803 seconds)
+Total time to process all reports: 00:00:03.568 (3.568 seconds)<br>
+Total time including file writes: 00:00:03.568 (3.568 seconds)
 </div>
 </body>
 </html>
