--- a/report/books/A_randomized_list_of_reserved_comic_book_trade_titles.html
+++ b/report/books/A_randomized_list_of_reserved_comic_book_trade_titles.html
@@ -7,144 +7,144 @@
 </head>
 <body>
 <div class="content">
-A randomized list of reserved comic book trade titles - 11/16/2021 06:00<br>
+A randomized list of reserved comic book trade titles - 11/17/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 127 books<br>
  <br>
-Atomic Robo Crystals are Integral - 13H 4M<br>
-Superman vol 3 - 4H 28M<br>
-Astonishing Spider-man & Wolverine - 5H 13M<br>
-X-men Gold vol 1 - 4H 28M<br>
-Batman 66 vol 3 - 5H 13M<br>
-Batman Damned - 5H 28M<br>
-Saga vol 6 - 4H 43M<br>
-Martian Manhunter Vol. 1 The Epiphany - 4H 58M<br>
-Batman Eternal vol 2 - 13H 56M<br>
-Wolverine - Black, White & Blood Treasury Edition - 4H 14M<br>
-Sandman Omnibus vol 1 - 32H 22M<br>
-Batman Eternal vol 1 - 14H 56M<br>
-Star Wars Skywalker Strikes vol 1 - 4H 28M<br>
-Avengers vol 1 - 4H 58M<br>
-War Machine - Volume 1 Iron Heart - 4H 14M<br>
-Green Lanterns vol 3 - 5H 13M<br>
-Spider-geddon - 6H 13M<br>
-Deadpool v Gambit - 3H 29M<br>
-Lumberjanes - 4H 6M<br>
-Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
-The Dark Knight Returns - 6H 58M<br>
-Future State Wonder Woman - 6H 13M<br>
-Batman Knightfall Vol. 1 - 8H 43M<br>
-Umbrella Academy vol 2 - 5H 58M<br>
-Maus I - A Survivor's Tale - My Father Bleeds History - 4H 57M<br>
-Infamous Iron Man vol 2 - 4H 14M<br>
-Uncanny X-force vol 1 - 16H 11M<br>
-Spider-Verse - 20H 10M<br>
-Rocket Raccoon & Groot Vol. 2 - 3H 29M<br>
-Spider-man-Deadpool vol 2 - 3H 44M<br>
-Suicide Squad vol 5 - 6H 28M<br>
-Civil War II - 9H 12M<br>
-Spawn Origins Volume 1 - 4H 58M<br>
-Black Panther vol 1 - 4H 28M<br>
-Batman vol 9 - 4H 43M<br>
-Transformers All Hail Megatron Volume 1 - 4H 43M<br>
-Justice League Darkseid War - 11H 42M<br>
-Guardians of the galaxy vol 1 - 9H 12M<br>
-Batman Last Knight on Earth - 5H 43M<br>
-Astonishing X-Men Vol 1 Gifted - 4H 43M<br>
-Deadpool v Carnage - 3H 44M<br>
-Pride of Baghdad - 4H 14M<br>
-Daredevil by Chip Zdarsky Vol. 1 Know Fear - 3H 44M<br>
-Green Lanterns vol 4 - 3H 59M<br>
-Lobo Portrait of a Bastich - 6H 28M<br>
-Transformers More Than Meets The Eye Volume 2 - 3H 51M<br>
-Spider-man Spider Island - 11H 42M<br>
-Deadpool Classic Killogy - 8H 43M<br>
-Maus II - A Survivor's Tale - And Here My Troubles Began - 4H 28M<br>
-Spider-gwen vol 3 - 3H 29M<br>
-Wonder Woman Vol. 2 Year One (Rebirth) - 5H 13M<br>
-Carnage vol 2 World Tour - 3H 29M<br>
-Thor Vol 1 The Goddess of Thunder - 4H 4M<br>
-Invincible Iron Man vol 1 - 4H 14M<br>
-Gwenpool, the Unbelievable Vol. 1 Believe It (The Unbelievable Gwenpool) - 4H 43M<br>
-Edge of Spider-geddon - 3H 44M<br>
-Deadpool too soon - 4H 14M<br>
-Despicable Deadpool vol 3 - 3H 29M<br>
-White Sand vol 2 - Brandon Sanderson - 4H 58M<br>
-Spider-Man Miles Morales Vol. 2 - 4H 14M<br>
-Atomic Robo Everything Explodes - 11H 57M<br>
-DCeased - 6H 58M<br>
-Spider-man-Deadpool vol 3 - 4H 14M<br>
-Deadpool, Vol. 2 Dark Reign - 3H 44M<br>
-Transformers All Hail Megatron Volume 2 - 4H 43M<br>
-Moon Knight Vol. 1 The Midnight Mission - 4H 28M<br>
-Action Comics 1000 - 4H 58M<br>
-How to Fall Forever (Black Science) - 4H 43M<br>
-Deadpool Dracula's Gauntlet - 6H 13M<br>
-Harley Quinn Vol. 1 Die Laughing (Rebirth) - 5H 13M<br>
-Suicide Squad vol 4 - 4H 28M<br>
-Super Sons vol 1 - 3H 59M<br>
-Marvel Action Captain Marvel Ghost in the Machine - 3H 44M<br>
-Batman Gotham by Gaslight (Elseworlds) - 3H 29M<br>
-Superman '78 - 4H 43M<br>
-Spawn Origins Volume 2 - 5H 43M<br>
-Detective Comics 1000 - 5H 28M<br>
-Thanos vol 1 - 4H 14M<br>
-Superman Red & Blue - 8H 28M<br>
-Star Wars War of the Bounty Hunters - 4H 58M<br>
-Spider-man Big Time vol 1 - 16H 11M<br>
-Saga vol 3 - 4H 28M<br>
-Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M<br>
-Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M<br>
 Darth Vader vol 4 - 5H 13M<br>
-Peter Parker The Spectacular Spider-man vol 1 - 4H 28M<br>
-Iron Man Extremis - 4H 58M<br>
-Batman '89 - 4H 43M<br>
-Thor God of Thunder Reborn vol 1 - 4H 14M<br>
-Beta Ray Bill Argent Star - 3H 59M<br>
-We Only Find Them When They're Dead Vol. 2 - 4H 28M<br>
-Superman vol 4 - 5H 28M<br>
-Fantastic Four vol 1 - 4H 28M<br>
-Batman vol 8 - 5H 28M<br>
-Gwenpool, The Unbelievable Vol. 2 Head of M.O.D.O.K. TPB (The Unbelievable Gwenpool) - 4H 14M<br>
-Eternals Vol. 1 Only Death is Eternal - 4H 58M<br>
-Teen Titans by Geoff Johns Book One - 11H 27M<br>
-Batwoman vol 1 - 5H 13M<br>
-Green Lanterns vol 2 - 6H 28M<br>
+Harley Quinn Vol. 1 Die Laughing (Rebirth) - 5H 13M<br>
 Marvel Infinity - 18H 25M<br>
-The Unstoppable Wasp Unlimited Vol. 1 Fix Everything - 3H 44M<br>
-Saga vol 4 - 4H 28M<br>
-Justice League Dark Vol. 1 The Last Age of Magic - 4H 58M<br>
 Batman The Doom That Came To Gotham - 5H 28M<br>
-Dark Nights Death Metal Deluxe Edition - 7H 13M<br>
-Iron Man 2020 Robot Revolution - 4H 14M<br>
-Uncanny X-force vol 2 - 12H 42M<br>
-Superior Spider-man Necessary Evil - 3H 36M<br>
-Spider-gwen vol 2 - 3H 29M<br>
-Batman Li'l Gotham Vol. 1 - 8H 28M<br>
-Amazing Spider-man Worldwide vol 1 - 4H 14M<br>
-Deadpool, Vol. 3 X Marks the Spot - 4H 28M<br>
-Saga vol 5 - 4H 43M<br>
-Batman Arkham Asylum - 7H 13M<br>
-Despicable Deadpool vol 2 - 3H 29M<br>
-Once & Future Vol. 1 - 4H 58M<br>
-Daredevil by Waid Rivera Vol. 1 - 4H 43M<br>
-Swamp Thing Bronze Age vol 1 - 9H 27M<br>
-Amazing Spider-Man Venom Inc - 4H 58M<br>
-Umbrella Academy vol 1 - 5H 43M<br>
-The Weatherman Volume 1 - 6H 13M<br>
-Batman 66 vol 2 - 5H 28M<br>
-Black Panther vol 2 - 4H 28M<br>
-Darth Vader vol 3 - 3H 59M<br>
-Mister Miracle - 9H 57M<br>
+Marvel Action Captain Marvel Ghost in the Machine - 3H 44M<br>
 Death of Doctor Strange - 4H 14M<br>
+Deadpool too soon - 4H 14M<br>
+Superior Spider-man Necessary Evil - 3H 36M<br>
+The Dark Knight Returns - 6H 58M<br>
+Spawn Origins Volume 2 - 5H 43M<br>
+DCeased - 6H 58M<br>
+Spider-Man Miles Morales Vol. 2 - 4H 14M<br>
+Despicable Deadpool vol 2 - 3H 29M<br>
+Martian Manhunter Vol. 1 The Epiphany - 4H 58M<br>
+War Machine - Volume 1 Iron Heart - 4H 14M<br>
+Dark Nights Death Metal Deluxe Edition - 7H 13M<br>
+Thanos vol 1 - 4H 14M<br>
+Moon Knight Vol. 1 The Midnight Mission - 4H 28M<br>
+Amazing Spider-Man Venom Inc - 4H 58M<br>
+Spider-gwen vol 3 - 3H 29M<br>
+Batman Damned - 5H 28M<br>
+Transformers More Than Meets The Eye Volume 2 - 3H 51M<br>
+Batman Arkham Asylum - 7H 13M<br>
+Sandman Omnibus vol 1 - 32H 22M<br>
+Gwenpool, The Unbelievable Vol. 2 Head of M.O.D.O.K. TPB (The Unbelievable Gwenpool) - 4H 14M<br>
+Superman '78 - 4H 43M<br>
+Lumberjanes - 4H 6M<br>
+Transformers All Hail Megatron Volume 2 - 4H 43M<br>
+Batman '89 - 4H 43M<br>
+Deadpool, Vol. 2 Dark Reign - 3H 44M<br>
+We Only Find Them When They're Dead Vol. 2 - 4H 28M<br>
+Saga vol 3 - 4H 28M<br>
+Black Panther vol 1 - 4H 28M<br>
+Saga vol 6 - 4H 43M<br>
+Deadpool v Carnage - 3H 44M<br>
+Uncanny X-force vol 1 - 16H 11M<br>
+Invincible Iron Man vol 1 - 4H 14M<br>
+Transformers All Hail Megatron Volume 1 - 4H 43M<br>
+Suicide Squad vol 5 - 6H 28M<br>
+Maus I - A Survivor's Tale - My Father Bleeds History - 4H 57M<br>
+Swamp Thing Bronze Age vol 1 - 9H 27M<br>
+Super Sons vol 1 - 3H 59M<br>
+Guardians of the galaxy vol 1 - 9H 12M<br>
+Superman vol 4 - 5H 28M<br>
+Green Lanterns vol 3 - 5H 13M<br>
+Future State Wonder Woman - 6H 13M<br>
+Superman vol 3 - 4H 28M<br>
+Fantastic Four vol 1 - 4H 28M<br>
+Deadpool, Vol. 3 X Marks the Spot - 4H 28M<br>
+Spider-man Big Time vol 1 - 16H 11M<br>
+Infamous Iron Man vol 2 - 4H 14M<br>
+Batman Gotham by Gaslight (Elseworlds) - 3H 29M<br>
+Action Comics 1000 - 4H 58M<br>
+Avengers vol 1 - 4H 58M<br>
+Umbrella Academy vol 1 - 5H 43M<br>
+Wolverine - Black, White & Blood Treasury Edition - 4H 14M<br>
+Once & Future Vol. 1 - 4H 58M<br>
+Deadpool Dracula's Gauntlet - 6H 13M<br>
+Green Lanterns vol 2 - 6H 28M<br>
+Spider-man Spider Island - 11H 42M<br>
+Saga vol 5 - 4H 43M<br>
+Thor Vol 1 The Goddess of Thunder - 4H 4M<br>
+Detective Comics 1000 - 5H 28M<br>
+Batman 66 vol 2 - 5H 28M<br>
+Batman Knightfall Vol. 1 - 8H 43M<br>
+Eternals Vol. 1 Only Death is Eternal - 4H 58M<br>
+Astonishing X-Men Vol 1 Gifted - 4H 43M<br>
+Darth Vader vol 3 - 3H 59M<br>
+Justice League Darkseid War - 11H 42M<br>
+Spider-gwen vol 2 - 3H 29M<br>
+Spawn Origins Volume 1 - 4H 58M<br>
+Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
+Atomic Robo Everything Explodes - 11H 57M<br>
+Despicable Deadpool vol 3 - 3H 29M<br>
 Red Hood and the Outlaws vol 1 - 5H 13M<br>
+Batman vol 8 - 5H 28M<br>
+Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M<br>
+Star Wars War of the Bounty Hunters - 4H 58M<br>
+Batman Li'l Gotham Vol. 1 - 8H 28M<br>
+Edge of Spider-geddon - 3H 44M<br>
+Spider-Verse - 20H 10M<br>
+Amazing Spider-man Worldwide vol 1 - 4H 14M<br>
+Lobo Portrait of a Bastich - 6H 28M<br>
+Pride of Baghdad - 4H 14M<br>
+Green Lanterns vol 4 - 3H 59M<br>
+Batwoman vol 1 - 5H 13M<br>
+Saga vol 4 - 4H 28M<br>
+Daredevil by Chip Zdarsky Vol. 1 Know Fear - 3H 44M<br>
+Mister Miracle - 9H 57M<br>
+Batman Last Knight on Earth - 5H 43M<br>
+Daredevil by Waid Rivera Vol. 1 - 4H 43M<br>
+Star Wars Skywalker Strikes vol 1 - 4H 28M<br>
+Uncanny X-force vol 2 - 12H 42M<br>
+Batman 66 vol 3 - 5H 13M<br>
+Maus II - A Survivor's Tale - And Here My Troubles Began - 4H 28M<br>
+Teen Titans by Geoff Johns Book One - 11H 27M<br>
+Spider-man-Deadpool vol 3 - 4H 14M<br>
+Batman vol 9 - 4H 43M<br>
+The Unstoppable Wasp Unlimited Vol. 1 Fix Everything - 3H 44M<br>
+Justice League Dark Vol. 1 The Last Age of Magic - 4H 58M<br>
+Umbrella Academy vol 2 - 5H 58M<br>
+Beta Ray Bill Argent Star - 3H 59M<br>
+Atomic Robo Crystals are Integral - 13H 4M<br>
+Spider-man-Deadpool vol 2 - 3H 44M<br>
+Iron Man 2020 Robot Revolution - 4H 14M<br>
+Superman Red & Blue - 8H 28M<br>
+Astonishing Spider-man & Wolverine - 5H 13M<br>
+Carnage vol 2 World Tour - 3H 29M<br>
+Rocket Raccoon & Groot Vol. 2 - 3H 29M<br>
+Deadpool Classic Killogy - 8H 43M<br>
+The Weatherman Volume 1 - 6H 13M<br>
+Black Panther vol 2 - 4H 28M<br>
+White Sand vol 2 - Brandon Sanderson - 4H 58M<br>
+Spider-geddon - 6H 13M<br>
+X-men Gold vol 1 - 4H 28M<br>
+Civil War II - 9H 12M<br>
+Wonder Woman Vol. 2 Year One (Rebirth) - 5H 13M<br>
+Suicide Squad vol 4 - 4H 28M<br>
+How to Fall Forever (Black Science) - 4H 43M<br>
+Batman Eternal vol 2 - 13H 56M<br>
+Peter Parker The Spectacular Spider-man vol 1 - 4H 28M<br>
+Batman Eternal vol 1 - 14H 56M<br>
+Iron Man Extremis - 4H 58M<br>
+Gwenpool, the Unbelievable Vol. 1 Believe It (The Unbelievable Gwenpool) - 4H 43M<br>
+Deadpool v Gambit - 3H 29M<br>
+Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M<br>
+Thor God of Thunder Reborn vol 1 - 4H 14M<br>
 -----------------------------------------------------<br>
  <br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 138 books - 1789H 44M / 74D 13H 44M<br>
+Queue - Current Audiobooks - 139 books - 1803H 22M / 75D 3H 22M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 79 books - 741H 20M / 30D 21H 20M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -159,28 +159,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
 Book Reserve - Comic Trades - 127 books - 785H 55M / 32D 17H 55M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 494 books - 6506H 1M / 271D 2H 1M<br>
+Book Reserve - Audiobooks - 495 books - 6510H 32M / 271D 6H 32M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-169 queued items: 2273H 32M / 94D 17H 32M<br>
+170 queued items: 2287H 10M / 95D 7H 10M<br>
 0 reserve titles are marked as high priority<br>
-20.36% of reserve items are queued<br>
+20.43% of reserve items are queued<br>
  <br>
-All books included in this report: 1242 titles - 14636H 25M / 609D 20H 25M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1244 titles - 14654H 34M / 610D 14H 34M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
-Total remaining in queue and reserve: 830 titles - 10117H 17M / 421D 13H 17M<br>
-Average completed per year: 46.4 titles - 509H 17M / 21D 5H 17M<br>
+Total remaining in queue and reserve: 832 titles - 10135H 26M / 422D 7H 26M<br>
+Average completed per year: 46.4 titles - 509H 8M / 21D 5H 8M<br>
 Remaining years of reserve material at average yearly pace: 17.9<br>
-Remaining years of reserve material at current year pace: 9.2<br>
+Remaining years of reserve material at current year pace: 9.3<br>
  <br>
-Total time to process all reports: 00:00:01..75 (1.75 seconds)<br>
-Total time including file writes: 00:00:01..75 (1.75 seconds)
+Total time to process all reports: 00:00:13.986 (13.986 seconds)<br>
+Total time including file writes: 00:00:13.986 (13.986 seconds)
 </div>
 </body>
 </html>
