--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 11/16/2021 06:00<br>
+Completed books sorted by length - 11/17/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 412 books<br>
@@ -399,7 +399,7 @@ Stormlight Archive 4 - Rhythm of War - Brandon Sanderson - 57H 41M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 138 books - 1789H 44M / 74D 13H 44M<br>
+Queue - Current Audiobooks - 139 books - 1803H 22M / 75D 3H 22M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 79 books - 741H 20M / 30D 21H 20M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -414,28 +414,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
 Book Reserve - Comic Trades - 127 books - 785H 55M / 32D 17H 55M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 494 books - 6506H 1M / 271D 2H 1M<br>
+Book Reserve - Audiobooks - 495 books - 6510H 32M / 271D 6H 32M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-169 queued items: 2273H 32M / 94D 17H 32M<br>
+170 queued items: 2287H 10M / 95D 7H 10M<br>
 0 reserve titles are marked as high priority<br>
-20.36% of reserve items are queued<br>
+20.43% of reserve items are queued<br>
  <br>
-All books included in this report: 1242 titles - 14636H 25M / 609D 20H 25M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1244 titles - 14654H 34M / 610D 14H 34M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
-Total remaining in queue and reserve: 830 titles - 10117H 17M / 421D 13H 17M<br>
-Average completed per year: 46.4 titles - 509H 17M / 21D 5H 17M<br>
+Total remaining in queue and reserve: 832 titles - 10135H 26M / 422D 7H 26M<br>
+Average completed per year: 46.4 titles - 509H 8M / 21D 5H 8M<br>
 Remaining years of reserve material at average yearly pace: 17.9<br>
-Remaining years of reserve material at current year pace: 9.2<br>
+Remaining years of reserve material at current year pace: 9.3<br>
  <br>
-Total time to process all reports: 00:00:01..75 (1.75 seconds)<br>
-Total time including file writes: 00:00:01..75 (1.75 seconds)
+Total time to process all reports: 00:00:13.986 (13.986 seconds)<br>
+Total time including file writes: 00:00:13.986 (13.986 seconds)
 </div>
 </body>
 </html>
