--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 11/16/2021 06:00<br>
+Reserved books sorted by length - 11/17/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-830 books<br>
+832 books<br>
  <br>
 Art of War - Sun Tzu - 1H 16M (Queue - Audible Audiobooks)<br>
 Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Current Audiobooks)<br>
@@ -66,6 +66,7 @@ Murderbot Diaries 6 - Fugitive Telemetry - Martha Wells - 4H 25M (Queue - Curren
 X-men Gold vol 1 - 4H 28M (Book Reserve - Comic Trades)<br>
 The Man Who Folded Himself - David Gerrold - 4H 29M (Book Reserve - Audiobooks)<br>
 The Wake-Up Call - John Micklethwait - 4H 29M (Queue - Current Audiobooks)<br>
+Flora and Ulysses - Kate DiCamillo - 4H 31M (Book Reserve - Audiobooks)<br>
 Mood Elevator - Berrett Koehler - 4H 33M (Book Reserve - Audiobooks)<br>
 The Return of Sherlock Holmes, Volume 3 - Sir Arthur Conan Doyle - 4H 35M (Book Reserve - Audiobooks)<br>
 The Answer Is - Alex Trebek - 4H 37M (Book Reserve - Audiobooks)<br>
@@ -472,6 +473,7 @@ Shannara 20 Armageddon's Children (Genesis of Shannara, #1) - 13H 32M (Book Rese
 The Cat Who Walks Through Walls - Robert A. Heinlein - 13H 32M (Book Reserve - Audiobooks)<br>
 Life 3.0 - Max Tegmark - 13H 33M (Queue - Current Audiobooks)<br>
 Emotional Intelligence - Prof. Daniel Goleman, Ph.D - 13H 35M (Queue - Current Audiobooks)<br>
+The Last Shadow - Orson Scott Card - 13H 37M (Queue - Current Audiobooks)<br>
 A Tale of Two Cities - Charles Dickens - 13H 41M (Book Reserve - Audiobooks)<br>
 The Night Circus - Erin Morgenstern - 13H 44M (Book Reserve - Audiobooks)<br>
 Boneshaker - Cherie Priest - 13H 46M (Book Reserve - Audiobooks)<br>
@@ -744,7 +746,7 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 138 books - 1789H 44M / 74D 13H 44M<br>
+Queue - Current Audiobooks - 139 books - 1803H 22M / 75D 3H 22M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 79 books - 741H 20M / 30D 21H 20M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -759,28 +761,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
 Book Reserve - Comic Trades - 127 books - 785H 55M / 32D 17H 55M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 494 books - 6506H 1M / 271D 2H 1M<br>
+Book Reserve - Audiobooks - 495 books - 6510H 32M / 271D 6H 32M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-169 queued items: 2273H 32M / 94D 17H 32M<br>
+170 queued items: 2287H 10M / 95D 7H 10M<br>
 0 reserve titles are marked as high priority<br>
-20.36% of reserve items are queued<br>
+20.43% of reserve items are queued<br>
  <br>
-All books included in this report: 1242 titles - 14636H 25M / 609D 20H 25M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1244 titles - 14654H 34M / 610D 14H 34M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
-Total remaining in queue and reserve: 830 titles - 10117H 17M / 421D 13H 17M<br>
-Average completed per year: 46.4 titles - 509H 17M / 21D 5H 17M<br>
+Total remaining in queue and reserve: 832 titles - 10135H 26M / 422D 7H 26M<br>
+Average completed per year: 46.4 titles - 509H 8M / 21D 5H 8M<br>
 Remaining years of reserve material at average yearly pace: 17.9<br>
-Remaining years of reserve material at current year pace: 9.2<br>
+Remaining years of reserve material at current year pace: 9.3<br>
  <br>
-Total time to process all reports: 00:00:01..75 (1.75 seconds)<br>
-Total time including file writes: 00:00:01..75 (1.75 seconds)
+Total time to process all reports: 00:00:13.986 (13.986 seconds)<br>
+Total time including file writes: 00:00:13.986 (13.986 seconds)
 </div>
 </body>
 </html>
