--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 11/16/2021 06:00<br>
+Reserved books sorted by name - 11/17/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-830 books<br>
+832 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Book Reserve - Audiobooks)<br>
@@ -241,6 +241,7 @@ Fleet of Worlds 1 - Fleet of Worlds - Larry Niven - 9H 37M (Book Reserve - Audio
 Fleet of Worlds 2 - Juggler of Worlds - Larry Niven - 12H 56M (Book Reserve - Audiobooks)<br>
 Fleet of Worlds 3 - Destroyer of Worlds - Larry Niven - 11H 3M (Book Reserve - Audiobooks)<br>
 Fleet of Worlds 4 - Betrayer of Worlds - Larry Niven - 9H 39M (Book Reserve - Audiobooks)<br>
+Flora and Ulysses - Kate DiCamillo - 4H 31M (Book Reserve - Audiobooks)<br>
 Flowers for Algernon - Daniel Keyes - 9H 2M (Book Reserve - Audiobooks)<br>
 For Whom the Bell Tolls - Ernest Hemingway - 16H 27M (Book Reserve - Audiobooks)<br>
 Forgiving What You Can't Forget - Lysa TerKeurst - 8H 9M (Book Reserve - Audiobooks)<br>
@@ -648,6 +649,7 @@ The Integral Trees - Larry Niven - 8H 13M (Book Reserve - Audiobooks)<br>
 The Invisible Man - H G Wells - 6H 15M (Book Reserve - Audiobooks)<br>
 The Jungle - Upton Sinclair - 13H 21M (Book Reserve - Audiobooks)<br>
 The Langoliers - Stephen King - 8H 48M (Book Reserve - Audiobooks)<br>
+The Last Shadow - Orson Scott Card - 13H 37M (Queue - Current Audiobooks)<br>
 The Last Stargazers - Emily Levesque - 11H 23M (Book Reserve - Audiobooks)<br>
 The Last Theorem - Arthur C. Clarke - 12H 37M (Book Reserve - Audiobooks)<br>
 The Lathe of Heaven - Ursula K Le Guin - 6H 31M (Book Reserve - Audiobooks)<br>
@@ -847,7 +849,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 138 books - 1789H 44M / 74D 13H 44M<br>
+Queue - Current Audiobooks - 139 books - 1803H 22M / 75D 3H 22M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 79 books - 741H 20M / 30D 21H 20M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -862,28 +864,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
 Book Reserve - Comic Trades - 127 books - 785H 55M / 32D 17H 55M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 494 books - 6506H 1M / 271D 2H 1M<br>
+Book Reserve - Audiobooks - 495 books - 6510H 32M / 271D 6H 32M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-169 queued items: 2273H 32M / 94D 17H 32M<br>
+170 queued items: 2287H 10M / 95D 7H 10M<br>
 0 reserve titles are marked as high priority<br>
-20.36% of reserve items are queued<br>
+20.43% of reserve items are queued<br>
  <br>
-All books included in this report: 1242 titles - 14636H 25M / 609D 20H 25M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1244 titles - 14654H 34M / 610D 14H 34M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
-Total remaining in queue and reserve: 830 titles - 10117H 17M / 421D 13H 17M<br>
-Average completed per year: 46.4 titles - 509H 17M / 21D 5H 17M<br>
+Total remaining in queue and reserve: 832 titles - 10135H 26M / 422D 7H 26M<br>
+Average completed per year: 46.4 titles - 509H 8M / 21D 5H 8M<br>
 Remaining years of reserve material at average yearly pace: 17.9<br>
-Remaining years of reserve material at current year pace: 9.2<br>
+Remaining years of reserve material at current year pace: 9.3<br>
  <br>
-Total time to process all reports: 00:00:01..75 (1.75 seconds)<br>
-Total time including file writes: 00:00:01..75 (1.75 seconds)
+Total time to process all reports: 00:00:13.986 (13.986 seconds)<br>
+Total time including file writes: 00:00:13.986 (13.986 seconds)
 </div>
 </body>
 </html>
