--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 12/13/2021 06:00<br>
+Reserved books sorted by length - 12/14/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 833 books<br>
@@ -777,12 +777,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 416 titles - 4604H 52M / 191D 20H 52M<br>
 Total remaining in queue and reserve: 833 titles - 10116H 39M / 421D 12H 39M<br>
-Average completed per year: 46.5 titles - 514H 40M / 21D 10H 40M<br>
+Average completed per year: 46.5 titles - 514H 30M / 21D 10H 30M<br>
 Remaining years of reserve material at average yearly pace: 17.9<br>
 Remaining years of reserve material at current year pace: 9.6<br>
  <br>
-Total time to process all reports: 00:00:02..34 (2.34 seconds)<br>
-Total time including file writes: 00:00:02.341 (2.341 seconds)
+Total time to process all reports: 00:00:12.908 (12.908 seconds)<br>
+Total time including file writes: 00:00:12.908 (12.908 seconds)
 </div>
 </body>
 </html>
