--- a/report/books/20XX_book_images.html
+++ b/report/books/20XX_book_images.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-<img src="https://media.istockphoto.com/photos/coming-soon-neon-sign-the-banner-shining-light-signboard-collection-picture-id1332167985?b=1&k=20&m=1332167985&s=170667a&w=0&h=O-084eNJBhGZGJbJvNvUC1P6d4aSo6XkV4Kom7ZZcIQ=" width="300" >
+<img src="nobooks.jpg" width="300" >
 
 </div>
 </body>
